<resources>
    <string name="app_name">JobTracker</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="report_button_text">report</string>
    <string name="task_checkbox_txt">Task Done</string>

    <!-- text format strings -->
    <string name="operation_type_text">Operation : %1$s</string>
    <string name="work_permit_text">Work permit no: %1$s</string>
    <string name="site_location_text">Site : %1$s</string>
    <string name="publish_date_text">Task Published On : %1$s</string>
    <string name="finished_date_text">Task finished on : %1$s</string>
    <string name="trip_reasons_text">Trip reasons : %1$s</string>
    <string name="actions_text">Actions : %1$s</string>
    <string name="gen_serial_text">S/N : %1$s</string>
    <string name="comments_text">Comments : %1$s</string>
    <string name="start_time_text">Start time : %1$s</string>
    <string name="inform_time_text">Inform time : %1$s</string>
    <string name="contractor_text">Contractor : %1$s</string>
    <string name="gen_size_text">Size : %1$s</string>
    <string name="tank_serial_text">Tank serial : %1$s</string>
    <string name="sync_panel_text">Sync panel : %1$s</string>
    <string name="fire_extinguisher_text">FE S/N : %1$s</string>
    <string name="fe_expiry_text">FE exp date : %1$s</string>
    <string name="rhs_text">RHS : %1$s</string>
    <string name="oil_pressure_text">Oil pressure : %1$s</string>
    <string name="temp_text">Temperature : %1$s</string>
    <string name="l2l_voltage_text">L2L Voltage : %1$s</string>
    <string name="hz_text">HZ : %1$s</string>
    <string name="battery_charge_text">Battery charge : %1$s</string>

    <string name="jobs_title">Jobs</string>
    <string name="embloyee_name_Text">ahmed atef</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="Name">Name</string>
    <string name="signup">SignUp</string>
    <string name="no_account_yet_create_one">No account yet? Create one</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="install">Install</string>
    <string name="service">Service</string>
    <string name="trip">Trip</string>
    <string name="sumbit">sumbit</string>
    <string name="work_permit_number">Work permit number</string>
    <string name="field">Fields</string>
    <string name="site">site</string>
    <string name="contractor">contractor</string>
    <string name="genrator_serial_number">Genrator serial number</string>
    <string name="generator_size">Generator size</string>
    <string name="tank_serial_number">Tank serial number</string>
    <string name="sync_panel">sync panel</string>
    <string name="fire_extinguisher">Fire extinguisher</string>
    <string name="f_e_expiry_date">F.E. expiry date</string>
    <string name="comments">Comments</string>
    <string name="r_h_s">RHS</string>
    <string name="l_l_voltage">L-L voltage</string>
    <string name="temperature">Temperature</string>
    <string name="hz">HZ</string>
    <string name="actions">actions</string>
    <string name="battery_charge">Battery Charge</string>
    <string name="trip_reasons">Trip reasons</string>
    <string name="inform_time">Inform time</string>
    <string name="start_time">Start Time</string>
    <string name="title_activity_serviced">ServicedActivity</string>
    <string name="action_settings">Settings</string>
    <string name="err_msg_password">password less than 6 characters</string>
    <string name="err_msg_email">enter a valid email</string>
    <string name="action_add">add</string>
    <string name="action_sumbit">sumbit</string>
    <string name="action_edit">edit</string>
    <string name="action_sign_out">Sign out</string>
    <string name="err_msg_email_collision">Email already registered to another user</string>
    <string name="err_msg_weak_pass">choose Stronger password</string>
    <string name="err_msg_email_malformed">Use a valid email address</string>
    <string name="action_create_excel">Create Excel</string>
    <string name="alert_dialog_ok">Ok</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="choose_file_name">Choose file name</string>
    <string name="action_excel_files">Excel files</string>
    <string name="profile">profile</string>
    <string name="generators">Generators</string>
    <string name="workshop">Workshop</string>
    <string name="n_a">N/A</string>
    <string name="operation_history">Operation history</string>
</resources>
